--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,8 @@ minio-data/
 *.tar.gz
 *.zip
 *.tgz
+
+# === Windows 보안 스트림 무시 (Zone.Identifier) ===
+*:Zone.Identifier
+*.py:Zone.Identifier
+*.md:Zone.Identifier
