--- a/web-dashboard-service/Dockerfile
+++ b/web-dashboard-service/Dockerfile
@@ -8,18 +8,19 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Python 의존성 설치
-COPY requirements.txt .
+COPY web-dashboard-service/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# 애플리케이션 코드 복사
-COPY . .
+# _common 폴더 복사 (공통 모듈)
+COPY _common ./_common
 
-# 포트 노출
+# 애플리케이션 코드 복사
+COPY web-dashboard-service/ .
+
 EXPOSE 8501
 
 # 환경 변수 설정
 ENV PYTHONPATH=/app
 ENV DOCKER_ENV=true
 
-# Streamlit 실행
 CMD ["streamlit", "run", "app.py", "--server.port=8501", "--server.address=0.0.0.0"]
